# ARAP_libigl

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
.cache/clangd/index/: AlignedBox.h.C18671B36811A6BE.idx  AmbiVector.h.92E0C2FCF3E07C31.idx  Amd.h.BA443D264EABB697.idx  AngleAxis.h.F47335E0E73C9397.idx  Array.h.37A1687EA762AD0B.idx  ArrayBase.h.D5108E56C4EC4CBA.idx  ArrayCwiseBinaryOps.h.41E5BCB5A763DB85.idx  ArrayCwiseUnaryOps.h.21A98228BD8AD5A4.idx  ArrayWrapper.h.F77B8D4B9980DB79.idx  Assign.h.C4A33F1696BFBF99.idx  AssignEvaluator.h.E8D0F0674A536976.idx  AssignmentFunctors.h.29AF62D9D796345E.idx  BDCSVD.h.349358A385CAD925.idx  BandMatrix.h.C7224BC21845EE1C.idx  BasicPreconditioners.h.83BE60B7BE072844.idx  BiCGSTAB.h.16672522E633983F.idx  BinaryFunctors.h.BBBE366C09D399A4.idx  BlasUtil.h.D54385CE789DB53C.idx  Block.h.9A3AD247009A3C8C.idx  BlockHouseholder.h.7014D4F06F6C8691.idx  BlockMethods.h.0D10BEF94ED3E542.idx  BlockOfDynamicSparseMatrix.h.C81903300C94DA11.idx  BooleanRedux.h.77C14745D86AE59B.idx  Cholesky.47FD8947C07187BC.idx  ColPivHouseholderQR.h.96840BCC6AC66FBB.idx  CommaInitializer.h.3EC2E1EF0D9DA451.idx  CommonCwiseBinaryOps.h.F2F91512F9A0C103.idx  CommonCwiseUnaryOps.h.F185424851F9DCA5.idx  CompleteOrthogonalDecomposition.h.7B135F430D878193.idx  Complex.h.1D1615BBF54140E7.idx  Complex.h.8E62E95B7E7E53A7.idx  ComplexEigenSolver.h.DD806813525768F5.idx  ComplexSchur.h.802037CB93ACF283.idx  CompressedStorage.h.63FFB476430A43B8.idx  ConditionEstimator.h.FE3EA28699781F88.idx  ConjHelper.h.67CCC3C80F694F13.idx  (+464 more)
include/: MatrixBConstructor.h  MatrixLConstructor.h  WeightTable.h  arapDeform.h  arapDeformer.h  arapStuff.h  precompute.h
meshes/: bar3.off  test_cube_myres.off  test_mesh.off
source/: MatrixBConstructor.cpp  MatrixLConstructor.cpp  WeightTable.cpp  arapDeform.cpp  arapDeformer.cpp  arapStuff.cpp  precompute.cpp
